tests/baselines/reference/declarationEmitClassPrivateConstructor2.errors.txt
tests/cases/compiler/declarationEmitClassPrivateConstructor2.ts(5,38): error TS4031: Public property 'data' of exported class has or is using private name 'PrivateInterface'.
tests/cases/compiler/declarationEmitClassPrivateConstructor2.ts(10,33): error TS4063: Parameter 'data' of constructor from exported class has or is using private name 'PrivateInterface'.


==== tests/cases/compiler/declarationEmitClassPrivateConstructor2.ts (2 errors) ====
    interface PrivateInterface {
    }
    
    export class ExportedClass1 {
        private constructor(public data: PrivateInterface) { }
                                         ~~~~~~~~~~~~~~~~
!!! error TS4031: Public property 'data' of exported class has or is using private name 'PrivateInterface'.
    }
    
    
    export class ExportedClass2 {
        protected constructor(data: PrivateInterface) { }
                                    ~~~~~~~~~~~~~~~~
!!! error TS4063: Parameter 'data' of constructor from exported class has or is using private name 'PrivateInterface'.
    }